--- a/_config.yml
+++ b/_config.yml
@@ -37,16 +37,8 @@ footer:
   social: Around the Web
   credits: Credits
 
-# Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
+# Social networks usernames (many more available: twitter, facebook, stack-overflow, bitbucket, google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url:
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url:
-  - title: bitbucket
-    url:
   - title: github
     url: http://github.com/hmlewis-astro
   - title: linkedin
