--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ contact: static
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 18bc9c #80B3FF
-  primary-rgb: "24,288,156" #"128,179,255"
+  primary: b5c9d9 #18bc9c #80B3FF
+  primary-rgb: "181,201,217" #"24,288,156" #"128,179,255"
   secondary: 2c3e50 #FD6E8A
   secondary-dark: 233140 #A2122F
 
