--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ contact: static
 color:
   primary: b5c9d9 #18bc9c #80B3FF
   primary-rgb: "181,201,217" #"24,288,156" #"128,179,255"
-  secondary: 2c3e50 #FD6E8A
-  secondary-dark: 233140 #A2122F
+  secondary: 282c30 #2c3e50 #FD6E8A
+  secondary-dark: 282c30 #233140 #A2122F
 
 # Footer settings
 footer:
