--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ color:
 
 # Footer settings
 footer:
-  copyright: Hannah M. Lewis
+  copyright: Hannah Lewis
   location: Location
   social: Around the Web
   credits: Credits
