--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: Hannah M. Lewis
 email: hanlewis528@gmail.com
-url: https://github.com/jeromelachaud/freelancer-theme
+url: https://hmlewis-astro.github.io/
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 keywords: "your keywords, separated by commas"
-skills: "Astronomer - Data Scientist - Statistician"
+skills: "Astronomer Turned Data Scientist"
 meta_author: Lewis Hannah
 
 # Google webmaster tools
