--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Hannah M. Lewis
 email: hanlewis528@gmail.com
 url: https://hmlewis-astro.github.io/
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-keywords: "your keywords, separated by commas"
+description: "Personal website of Hannah M. Lewis, PhD."
+keywords: "hannah, lewis, astronomy, astronomer, astrophysics, researcher, data science, data scientist, metis, university of virginia, virginia, uva"
 skills: "Astronomer - Researcher - Data Scientist"
 meta_author: Lewis Hannah
 
