--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ meta_author: Lewis Hannah
 
 # Google webmaster tools
 google_verify:
+google_analytics: G-7J5Q8FQF98
 
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:
