update skills section

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: hanlewis528@gmail.com
 url: https://hmlewis-astro.github.io/
 description: "Personal website of Hannah M. Lewis, PhD."
 keywords: "hannah, lewis, astronomy, astronomer, astrophysics, researcher, data science, data scientist, metis, university of virginia, virginia, uva"
-skills: "Astronomer - Researcher - Data Scientist"
+skills: "Data Scientist - Astronomer - Researcher"
 meta_author: Lewis Hannah
 
 # Google webmaster tools
